--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=bibloteca
 # Configuración de base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca_online?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://tramway.proxy.rlwy.net:17569/railway?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=ssANlpztGCrHEueFBgRdArlABkrJPbLC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de JPA / Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca_online?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
